[gd_scene load_steps=6 format=3 uid="uid://bn4dd7hcawo6o"]

[ext_resource type="Script" path="res://Scenes/League Editor/Tournament Nodes/LeagueNode.gd" id="1_110ef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u7v0"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0.168627, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hpwwb"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s00ql"]
content_margin_left = 10.0
bg_color = Color(0, 0.32549, 0.529412, 1)

[sub_resource type="Theme" id="Theme_h5b2j"]
GraphNode/styles/panel = SubResource("StyleBoxFlat_7u7v0")
GraphNode/styles/panel_selected = SubResource("StyleBoxFlat_hpwwb")
GraphNode/styles/titlebar = SubResource("StyleBoxFlat_s00ql")

[node name="GraphNode" type="GraphNode"]
custom_minimum_size = Vector2(600, 525)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h5b2j")
title = "League Stage"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_110ef")

[node name="Name&ID" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="LineEdit" type="LineEdit" parent="Name&ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage Name"
alignment = 1
max_length = 40

[node name="Label" type="Label" parent="Name&ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage ID: "
horizontal_alignment = 1

[node name="DatesInput" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="StartDate" type="Label" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Date"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 12
allow_reselect = true
popup/item_0/text = "January"
popup/item_0/id = 0
popup/item_1/text = "February"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_11/text = "December"
popup/item_11/id = 11

[node name="OptionButton2" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
allow_reselect = true

[node name="EndDate" type="Label" parent="DatesInput"]
layout_mode = 2
text = "End Date"
horizontal_alignment = 1

[node name="OptionButton5" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 12
allow_reselect = true
popup/item_0/text = "January"
popup/item_0/id = 0
popup/item_1/text = "February"
popup/item_1/id = 1
popup/item_2/text = "March"
popup/item_2/id = 2
popup/item_3/text = "April"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "August"
popup/item_7/id = 7
popup/item_8/text = "September"
popup/item_8/id = 8
popup/item_9/text = "October"
popup/item_9/id = 9
popup/item_10/text = "November"
popup/item_10/id = 10
popup/item_11/text = "December"
popup/item_11/id = 11

[node name="OptionButton4" type="OptionButton" parent="DatesInput"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
allow_reselect = true

[node name="LeagueSpecificOptions" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="NumGamesPerTeam" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Games Each Team Will Play"
horizontal_alignment = 1

[node name="NumGamesPerTeamInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
rounded = true
alignment = 1
suffix = "Points"

[node name="WinPoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Points Gained Per Win"
horizontal_alignment = 1

[node name="WinPointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
value = 3.0
rounded = true
alignment = 1
suffix = "Points"

[node name="DrawPoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
text = "Number of Points Gained Per Draw"
horizontal_alignment = 1

[node name="DrawPointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
min_value = -100.0
value = 1.0
rounded = true
alignment = 1
suffix = "Points"

[node name="LosePoints" type="Label" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Points Gained Per Lose"
horizontal_alignment = 1

[node name="LosePointsInput" type="SpinBox" parent="LeagueSpecificOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
rounded = true
alignment = 1
suffix = "Points"

[node name="TeamListArea" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="TeamList" type="ItemList" parent="TeamListArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TeamListArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddTeam" type="MenuButton" parent="TeamListArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Add Qualifying Team"
flat = false
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="DeleteTeam" type="Button" parent="TeamListArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Delete Team"
